[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "support_dashboard"
version = "0.0.1"
authors = [
  { name="Jørgen Hauge", email="jorgen78@gmail.com" },
]
description = "Support dashboard customer inquiries"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas",
  "matplotlib",
  "pytest",
  "flake8"
]

[project.scripts]
support-dashboard = "morse_datalogger:main"

[project.urls]
Homepage = "https://github.com/jorgenhauge/support_dashboard"
Issues = "https://github.com/jorgenhauge/support_dashboard/issues"

